syntax = "proto3";

package Ketchup.Menu;

service RpcMenu{
	//创建或修改
	rpc CreateOrEdit(MenuDto) returns (MenuDto);
	//分页查询
	rpc PageSerach(SearchMenu) returns(MenutList);
	//根据角色获取菜单
	rpc GetMenusByRole(MenusRoleRequest)returns(MenusRoleReponse);
	//设置权限时获取菜单及其菜单的功能
	rpc GetRoleMenus(MenusRoleRequest)returns(RoleMenuReponse);
}

message MenuDto{

	//父级
	int32 ParentId=1;
	///菜单名称
	string Name=2;

	///菜单地址
	string Url=3;

	///层级
	int32 Level=4;

	///菜单权限(list<int /> json)
	string Operates=5;

	/// 菜单图标
	string Icon=6;	

	//主键
	int32 Id=7;
}
message MenutList {
	repeated MenuDto Datas = 1;
	int32 Total=2;
}
message SearchMenu{
	int32 ParentId=1;
	int32 PageIndex=2;
	int32 PageMax=3;
}
message MenusRoleRequest{
	int32 RoleId=1;
}
message MenusByRole{
	int32 Id=1;
	string Title=2;
	string Icon=3;
	string Path=4;
	repeated MenusByRole Children=5;
}
message MenusRoleReponse{
	repeated MenusByRole Datas=1;
}
message RoleMenuReponse{
	repeated string MenuIds=1;
	repeated MenuModel List=2;
}
message MenuModel{
	string Id=1;
	string Lable=2;
	repeated MenuModel Children=3;
}